--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>IPRECON 2021</title>
+    <title>IPRECON 2023</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -63,11 +63,11 @@
     
     <div class="container-fluid">
         <div class="row" style="text-align: center;">
-            <img src="assets/img/h1.png" style="width: 100%;">
+            <img src="assets/img/h1.jpg" style="width: 100%;">
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 have been posted in the IEEE Xplore® Digital Library! To View
+        <span>Presented Papers of IPRECON 2022 will been posted in the IEEE Xplore® Digital Library! Soon
             <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
@@ -75,13 +75,15 @@
 
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="padding: 16px">
-            <div class="container"><a class="navbar-brand" href="https://iprecon2021.org" style="font-family: Montserrat, sans-serif;"><strong>IPRECON</strong> 2021</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="https://iprecon.org" style="font-family: Montserrat, sans-serif;"><strong>IPRECON</strong> 2023</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1" style="font-family: Montserrat, sans-serif;font-size: 12px;">
                     <ul class="nav navbar-nav ml-auto" style="font-size: 14px;">
                         <li class="nav-item" role="presentation"><a class="nav-link active" href="./index.html">HOME<br></a></li>
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                             <div class="dropdown-menu" role="menu">
+                                <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2022</a>
+                                <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2021</a>
                                 <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2020</a>
                                 <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                 <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
@@ -148,12 +150,14 @@
         <div class="container" id="header">
             
 
-            <div class="row" style="color: white; background-color: #210F21; padding: 20px; border-radius: 10px;">
+            <div class="row" style="color: white; background-color: #210F21; padding: 30px; border-radius: 10px;">
                 <span style="margin-bottom: 10px; font-size: 20px;"><strong>Important information</strong></span><br><br>
-                <p style="font-size: 16px;">&#10132;Presented papers of IPRECON 2023 have been posted in the IEEE Xplore® Digital Library! To View
-                    <a href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding" style="color: wheat; padding-left: 0.2rem;"><strong>Click Here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
+                <p style="font-size: 16px;">&#10132;Presented papers of IPRECON 2022 will be posted in the IEEE Xplore® Digital Library! Soon
+                    <a href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding" style="color: wheat; padding-left: 0.2rem;"><strong>Update Soon<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
                     <br><br>
-                    &#10132; 20% of the presented conference papers will be eligible for further review and possible publication in IEEE IAS Periodicals.
+                    &#10132; For more information on IPRECON 2022 Please Click Here
+                    <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click Here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
+                    <br><br>
                     <!--br>
                     &#10132; Due to increasing rate of COVID-19, the conference will be held virtually.
                     <br><br>
@@ -313,7 +317,7 @@
                         <li>Swarm intelligence and algorithms for optimising smart cities<br></li>    
                     </ul>
                     Accepted papers will be submitted for inclusion into the IEEE Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes and quality requirements.<br><br>
-                    <a href="assets/iprecon2021_cfp1.pdf"><button
+                    <a href="assets/IPRECON_CFP.pdf"><button
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download CFP</strong></button></a>
                     &nbsp;
                     <a href="#0"><button
