--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 will been posted in the IEEE Xplore® Digital Library! Soon
-            <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
+        <span>Presented Papers of IPRECON 2022 will been publish in the IEEE Xplore® Digital Library! in the month of March
+            <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
 
@@ -153,7 +153,7 @@
             <div class="row" style="color: white; background-color: #210F21; padding: 30px; border-radius: 10px;">
                 <span style="margin-bottom: 10px; font-size: 20px;"><strong>Important information</strong></span><br><br>
                 <p style="font-size: 16px;">&#10132;Presented papers of IPRECON 2022 will be posted in the IEEE Xplore® Digital Library! Soon
-                    <a href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding" style="color: wheat; padding-left: 0.2rem;"><strong>Update Soon<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
+                    <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Update Soon<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
                     <br><br>
                     &#10132; For more information on IPRECON 2022 Please Click Here
                     <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click Here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
@@ -227,7 +227,7 @@
                         5thth of November 2023 in College of Engineering Karunagappally, Kerala, India.</p>
                 </div>
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" style="padding: 0px;padding-top: 0px;">
-                    <img src="assets/img/iprecon21.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
+                    <img src="assets/img/iprecon23.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
                 </div>
             </div>
         </div>
@@ -346,7 +346,7 @@
             <div class="row">
                 <!--<div class="col-md-3"><img src="assets/img/Asset%202.png" data-aos="fade-up" data-aos-delay="400" style="width: 60%;margin-left: 67px;"></div>
                 <div class="col-md-3"><img src="assets/img/Asset%209.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: 67px;"></div>-->
-                <div class="col-md-3"><img src="assets/img/Asset%203.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: 67px;"></div>
+                <div class="col-md-3 "><img src="assets/img/Asset%203.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: auto;margin-right: auto;"></div>
                 <!--<div class="col-md-3"><img src="assets/img/Asset%208.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: 67px;"></div>-->
             </div>
         </div>
