--- a/cfp.html
+++ b/cfp.html
@@ -121,7 +121,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"><img src="assets/img/iprecon2021_cfp1.jpg" style="width: 100%;"></div>
+                <div class="col-md-12"><img src="assets/CFP_IPRECON.pdf" style="width: 100%;"></div>
             </div>
         </div>
     </div>
