--- a/dates.html
+++ b/dates.html
@@ -139,19 +139,19 @@
                 <div class="col-md-3">
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">16<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>January 2021</b></h6>
-                            <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br><br><br>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>June 2023</b></h6>
+                            <p class="card-text" style="font-size: 23px;">Paper Submission will Open soon</p><br><br><br>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>April 2021</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
                              <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
-                             <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p>
+                             <p class="card-text" style="font-size: 23px; color: red;">Update Soon</p>
                              <br>
                         </div>
                     </div>
@@ -159,10 +159,10 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">10<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>June 2021</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>October 2021</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
-                            <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p>
+                            <p class="card-text" style="font-size: 23px; color: red;">Update Soon</p>
                             <br>
                             <!--p class="card-text" style="font-size: 20px; color: red;">For Submission Related Queries <a style="color: rgb(202, 60, 60);" 
                                 href="./contact.html">Click here!</a></p-->
@@ -172,10 +172,10 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="500">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>July 2021</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>December 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Final Camera-Ready Paper</p>
-                            <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p>   
+                            <p class="card-text" style="font-size: 23px; color: red;">Update Soon</p>   
                             <br>
                         </div>
                     </div>
