--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 will been publish in the IEEE Xplore® Digital Library! in the month of March
+        <span>Presented Papers of IPRECON 2022 is published in the IEEE Xplore® Digital Library! in the month of March
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -247,8 +247,8 @@
                 <div class="col-md-3">
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>Februvary 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>June 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br><br><br>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
                             <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>May 2021</b></h6>
+                            <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
                              <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                              <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
                              <br>
@@ -268,8 +268,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>October 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
                             <br>
@@ -281,8 +281,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="500">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>September 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>December 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Final Camera-Ready Paper</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p>    -->
                             <br>
@@ -317,7 +317,7 @@
                         <li>Swarm intelligence and algorithms for optimising smart cities<br></li>    
                     </ul>
                     Accepted papers will be submitted for inclusion into the IEEE Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes and quality requirements.<br><br>
-                    <a href="assets/IPRECON_CFP.pdf"><button
+                    <a href="assets/CFP_IPRECON.pdf"><button
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download CFP</strong></button></a>
                     &nbsp;
                     <a href="#0"><button
