--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="row">
                <div class="col-md-12 col-xl-12 float-left" style="padding-right: 25px;padding-left: 25px;">
                     <p class="d-xl-flex" style="font-size: 32.5px;font-family: Montserrat, sans-serif;margin-top: 10px;"><strong>2023 International Power and Renewable Energy Conference</strong></p>
-                    <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>3rd , 4th and 5th November 2023</b> (In-person Conference))</p>
+                    <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>26th , 27th and 28th December 2023</b> (In-person Conference))</p>
                     <hr>
                     <!--span>
                    <a href="./submission.html">              
