--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                         platform for students and professionals from all around the world to share their 
                         findings in the fields of Power, Renewable Energy and Computing Technologies. With 
                         the theme “Engineering the sustainable world with Renewable Energy Resources through 
-                        ingenious computing technologies”, the conference will be held on the 3rd, 4th and 
-                        5thth of November 2023 in College of Engineering Karunagappally, Kerala, India.</p>
+                        ingenious computing technologies”, the conference will be held on the 26th, 27th and 
+                        28th of December 2023 in College of Engineering Karunagappally, Kerala, India.</p>
                 </div>
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" style="padding: 0px;padding-top: 0px;">
                     <img src="assets/img/iprecon23.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
