--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download CFP</strong></button></a>
                     &nbsp;
                     <a href="#0"><button
-                        class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Submission Closed</strong></button></a>
+                        class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Update Soon</strong></button></a>
                 </div>
             </div>
             
