--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 is published in the IEEE Xplore® Digital Library! in the month of March
+        <span>Presented Papers of IPRECON 2022 is published in the IEEE Xplore® Digital Library!
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -82,9 +82,9 @@
                         <li class="nav-item" role="presentation"><a class="nav-link active" href="./index.html">HOME<br></a></li>
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                             <div class="dropdown-menu" role="menu">
-                                <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2022</a>
-                                <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2021</a>
-                                <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2020</a>
+                                <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON 2022</a>
+                                <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON 2021</a>
+                                <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON 2020</a>
                                 <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                 <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                 <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
@@ -152,8 +152,9 @@
 
             <div class="row" style="color: white; background-color: #210F21; padding: 30px; border-radius: 10px;">
                 <span style="margin-bottom: 10px; font-size: 20px;"><strong>Important information</strong></span><br><br>
-                <p style="font-size: 16px;">&#10132;Presented papers of IPRECON 2022 will be posted in the IEEE Xplore® Digital Library! Soon
-                    <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Update Soon<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
+                <p style="font-size: 16px;">
+                    &#10132;Presented papers of IPRECON 2022 will be posted in the IEEE Xplore® Digital Library! Soon
+                    <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
                     <br><br>
                     &#10132; For more information on IPRECON 2022 Please Click Here
                     <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click Here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
@@ -190,7 +191,7 @@
             <div class="row">
                <div class="col-md-12 col-xl-12 float-left" style="padding-right: 25px;padding-left: 25px;">
                     <p class="d-xl-flex" style="font-size: 32.5px;font-family: Montserrat, sans-serif;margin-top: 10px;"><strong>2023 International Power and Renewable Energy Conference</strong></p>
-                    <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>26th , 27th and 28th December 2023</b> (In-person Conference))</p>
+                    <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>27th , 28th and 29th December 2023</b> (Hybrid Conference))</p>
                     <hr>
                     <!--span>
                    <a href="./submission.html">              
@@ -257,7 +258,7 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>th</sup></h4>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
                             <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
                              <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                              <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
