--- a/speakers.html
+++ b/speakers.html
@@ -121,7 +121,7 @@
         </nav>
        </div>
     <h1 class="text-center" style="margin-top: 50px;">Speakers</h1>
-    <div>
+    <!-- <div>
         <br><br>
         <div class="container">
             <div class="row">
@@ -224,6 +224,9 @@
                 </div>
             </div>
         </div>
+    </div> -->
+    <div>
+        <h1 style="color: red; text-align: center;">will be updated soon</h1>
     </div>
     
     <div class="footer-clean" style="color: rgb(255,255,255);background-color: #210F21;margin-top: 8rem;">
