--- a/speakers.html
+++ b/speakers.html
@@ -93,8 +93,8 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">FOR AUTHORS</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a>
-                                    <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a>
+                                    <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a> -->
+                                    <!-- <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> -->
                                     <a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
@@ -226,7 +226,7 @@
         </div>
     </div> -->
     <div>
-        <h1 style="color: red; text-align: center;">will be updated soon</h1>
+        <h1 style="color: red; text-align: center;">Coming Soon</h1>
     </div>
     
     <div class="footer-clean" style="color: rgb(255,255,255);background-color: #210F21;margin-top: 8rem;">
