--- a/application.html
+++ b/application.html
@@ -65,7 +65,7 @@
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
         <span>Presented Papers of IPRECON 2021 have been posted in the IEEE Xplore® Digital Library! To View
-            <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
+            <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
         <div>
@@ -77,18 +77,23 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./index.html">HOME<br></a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="./iprecon2020/index.html">IPRECON 2020</a>
+                                    <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
+                                        2022</a>
+                                    <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON
+                                        2021</a>
+                                    <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON
+                                        2020</a>
                                     <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                     <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                     <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
                                     <a class="dropdown-item" role="presentation" href="./accomodation.html">ACCOMODATION</a>
                                 </div>
                             </li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li>
+                            <!-- <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li> -->
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">FOR AUTHORS</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a>
-                                    <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a>
+                                    <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a> -->
+                                    <!-- <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> -->
                                     <a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
@@ -96,13 +101,12 @@
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
-                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">SESSIONS</a>
+                            <!-- <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">SESSIONS</a>
                                 <div class="dropdown-menu" role="menu">
                                     <a class="dropdown-item" role="presentation" href="./keynotes.html">KEYNOTES & SPECIAL SESSIONS</a>
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
-                                        <!--a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a-->
                                 </div>
-                            </li>
+                            </li> -->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
