--- a/speakers.html
+++ b/speakers.html
@@ -90,7 +90,7 @@
                                     <a class="dropdown-item" role="presentation" href="./accomodation.html">ACCOMODATION</a>
                                 </div>
                             </li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li>
+                            <!-- <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li> -->
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">FOR AUTHORS</a>
                                 <div class="dropdown-menu" role="menu">
                                     <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a> -->
@@ -102,14 +102,13 @@
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
-                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">SESSIONS</a>
+                            <!-- <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">SESSIONS</a>
                                 <div class="dropdown-menu" role="menu">
                                     <a class="dropdown-item" role="presentation" href="./keynotes.html">KEYNOTES & SPECIAL SESSIONS</a>
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
-                                        <!--a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a-->
                                 </div>
-                            </li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li>
+                            </li> -->
+                            <!-- <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li> -->
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./assets/iprecon2021_process.pdf">TECHNICAL REVIEW PROCESS</a></li>
