--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 is published in the IEEE Xplore® Digital Library! in the month of March
+        <span>Presented papers of IPRECON 2023 have been posted in the IEEE Xplore® Digital Library! To View
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -152,8 +152,8 @@
 
             <div class="row" style="color: white; background-color: #210F21; padding: 30px; border-radius: 10px;">
                 <span style="margin-bottom: 10px; font-size: 20px;"><strong>Important information</strong></span><br><br>
-                <p style="font-size: 16px;">&#10132;Presented papers of IPRECON 2022 will be posted in the IEEE Xplore® Digital Library! Soon
-                    <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Update Soon<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
+                <p style="font-size: 16px;">&#10132;Presented papers of IPRECON 2022 have been posted in the IEEE Xplore® Digital Library! To View
+                    <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
                     <br><br>
                     &#10132; For more information on IPRECON 2022 Please Click Here
                     <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click Here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a> 
