Important dates change

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         style="font-size: 32.5px;font-family: Montserrat, sans-serif;margin-top: 10px;"><strong>2023
                             International Power and Renewable Energy Conference</strong></p>
                     <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>27th , 28th and
-                            29th December 2023</b> (Hybrid Conference))</p>
+                            29th December 2023</b> (Hybrid Conference)</p>
                     <hr>
                     <!--span>
                    <a href="./submission.html">              
@@ -273,8 +273,8 @@
                 <div class="col-md-3">
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>June 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br>
                         </div>
                     </div>
@@ -283,8 +283,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>September 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
                             <br>
@@ -294,8 +294,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>October 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>November 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
                             <br>
@@ -307,8 +307,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="500">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>December 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>November 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Final Camera-Ready Paper</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p>    -->
                             <br>
