--- a/committee.html
+++ b/committee.html
@@ -136,7 +136,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title"><strong>Amitha Nair</strong><br></h4>
+                            <h4 class="card-title"><strong>Alister Clietus</strong><br></h4>
                             <p class="card-text">College of Engineering Karunagappally<br></p>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title"><strong>Riya Elizabeth</strong><br></h4>
+                            <h4 class="card-title"><strong>Sidhi A S</strong><br></h4>
                             <p class="card-text">College of Engineering Karunagappally<br></p>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <p class="card-text"><strong>Deepa Girija Pillai</strong> (Chair)<br></p>
+                            <p class="card-text"><strong>Ajas Muhammed N</strong> (Chair)<br></p>
                             <h6 class="text-muted card-subtitle mb-2">College of Engineering Karunagappally<br></h6>
                         </div>
                     </div>
@@ -481,7 +481,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <p class="card-text"><strong>Hari Krishnan A</strong> (Chair)<br></p>
+                            <p class="card-text"><strong>Archa S</strong> (Chair)<br></p>
                             <h6 class="text-muted card-subtitle mb-2">College of Engineering Karunagappally<br></h6>
                         </div>
                     </div>
@@ -538,7 +538,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <p class="card-text"><strong>Anjana Aruldas</strong> (Chair)<br></p>
+                            <p class="card-text"><strong>Shifali</strong> (Chair)<br></p>
                             <h6 class="text-muted card-subtitle mb-2">College of Engineering Karunagappally<br></h6>
                         </div>
                     </div>
@@ -583,7 +583,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <p class="card-text"><strong>Jemi Jose</strong> (Chair)<br></p>
+                            <p class="card-text"><strong>Sarath K J</strong> (Chair)<br></p>
                             <h6 class="text-muted card-subtitle mb-2">College of Engineering Karunagappally<br></h6>
                         </div>
                     </div>
