--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                                 <a class="dropdown-item" role="presentation" href="./accomodation.html">ACCOMODATION</a>
                             </div>
                         </li>
-                        <!-- <li class="nav-item" role="presentation"><a class="nav-link"
-                                href="./committee.html">COMMITTEE</a></li> -->
+                        <li class="nav-item" role="presentation"><a class="nav-link"
+                                href="./committee.html">COMMITTEE</a></li>
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
                                 aria-expanded="false" href="#">FOR AUTHORS</a>
                             <div class="dropdown-menu" role="menu">
@@ -348,7 +348,7 @@
                                     Accepted papers will be submitted for inclusion into the IEEE
                                     Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes
                                     and quality requirements.<br><br>
-                                    <a href="assets/CFP_IPRECON.pdf"><button class="btn btn-primary" type="button"
+                                    <a href="assets/CFP-3.pdf"><button class="btn btn-primary" type="button"
                                             style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download
                                                 CFP</strong></button></a>
                                     &nbsp;
