--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,10 @@
            <div class="row text-center">
                <div class="col-md-5">
                    <h1 style="font-size: 25px;">Phone</h1>
-                   <p><strong>Hari Krishnan A</strong>   +91 98471 39103 <br>
-                    <strong>Cliffin Cletus</strong>   +91 81398 61033 <br>
-                    <strong>Riya Elizabeth</strong>  +91 94969 91107 <br>
-                    <strong>Amitha Nair</strong>   +91 85928 09680 <br>
+                   <p><strong>Alister Clietus</strong>   +91 90745 73015 <br>
+                    <strong>Sidhi A S</strong>   +91 97782 31771 <br>
+                    <strong>Ajas Muhammed N</strong>  +91 89217 47219 <br>
+                    <strong>Archa S</strong>   +91 88480 09402 <br>
                     </p>
                </div>
                <div class="col-md-2">
@@ -145,7 +145,7 @@
                </div>
                <div class="col-md-5">
                    <h1 style="font-size: 25px;">Email</h1>
-                   <p><strong>iprecon2021@gmail.com</strong><br><strong>ieeesbcek2000@gmail.com</strong><br><br></p>
+                   <p><strong>iprecon2023@gmail.com</strong><br><strong>ieeesbcek2000@gmail.com</strong><br><br></p>
                </div>
             </div>
    </div>
