--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
         direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 is published in the IEEE Xplore® Digital Library!
+        <span>
+            <!-- Presented Papers of IPRECON 2022 is published in the IEEE Xplore® Digital Library! -->
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -168,7 +169,7 @@
         <div class="container" id="header">
 
 
-            <div class="row" style="color: white; background-color: #210F21; padding: 30px; border-radius: 10px;">
+            <!-- <div class="row" style="color: white; background-color: #210F21; padding: 30px; border-radius: 10px;">
                 <span style="margin-bottom: 10px; font-size: 20px;"><strong>Important information</strong>
                     <br><br>
                     <p style="font-size: 16px;">
@@ -180,7 +181,7 @@
                         <a href="https://2022.iprecon.org/" style="color: wheat; padding-left: 0.2rem;"><strong>Click
                                 Here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a>
                         <br><br>
-                        &#10132; IPRECON 2023 Call for Paper will begin soon
+                        &#10132; IPRECON 2023 Call for Paper will begin soon -->
                         <!--br>
                             &#10132; Due to increasing rate of COVID-19, the conference will be held virtually.
                             <br><br>
@@ -203,9 +204,9 @@
                                         <a href="speakers.html" style="color: wheat; font-size: 25px;"><strong>Keynotes <i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a>
                                         <br> <br>
                                         <a href="speakers.html#special" style="color: wheat; font-size: 25px;"><strong>Special Session<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a-->
-                    </p>
+                    <!-- </p>
                 </span>
-            </div>
+            </div> -->
             <br>
 
 
@@ -249,17 +250,17 @@
                         About</h1>
                     <p class="text-justify"
                         style="font-family: Montserrat, sans-serif;color: rgb(255,255,255);font-size: 13px;padding: 0px;padding-top: 0px;margin-top: 33px;">
-                        2023 International Power and Renewable Energy Conference (IPRECON) is
+                        2023 IEEE International Power and Renewable Energy Conference (IPRECON) is
                         the 4th edition of India's first IEEE IAS Club of 6 Technical Paper Conference organized
-                        by IEEE Student Branch College of Engineering Karunagappally. IPRECON provides a
+                        by the IEEE Student Branch College of Engineering Karunagappally. IPRECON provides a
                         platform for students and professionals from all around the world to share their
                         findings in the fields of Power, Renewable Energy and Computing Technologies. With
                         the theme “Engineering the sustainable world with Renewable Energy Resources through
-                        ingenious computing technologies”, the conference will be held on the 26th, 27th and
-                        28th of December 2023 in College of Engineering Karunagappally, Kerala, India.</p>
+                        ingenious computing technologies”, the conference will be held on the 27th, 28th and
+                        29th of December 2023 at College of Engineering Karunagappally, Kerala, India.</p>
                 </div>
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" style="padding: 0px;padding-top: 0px;">
-                    <img src="assets/img/iprecon23.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
+                    <img src="assets/img/iprecon23_white.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
                 </div>
             </div>
         </div>
@@ -280,8 +281,8 @@
                 <div class="col-md-3">
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>June 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">10<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>September 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br>
                         </div>
                     </div>
@@ -291,7 +292,7 @@
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
                             <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>August 2023</b></h6>
+                            <h6 class="text-muted card-subtitle mb-2"><b>October 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
                             <br>
@@ -301,8 +302,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>October 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>November 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
                             <br>
@@ -314,8 +315,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="500">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>December 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>November 2023</b></h6>
                             <p class="card-text" style="font-size: 23px;">Final Camera-Ready Paper</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p>    -->
                             <br>
